<resources>
    <string name="app_name">clubDeportivo</string>
    <string name="metodo_de_pago">Método de pago</string>
    <string name="cantidad_de_cuotas">Cantidad de cuotas</string>
    <string name="valor_cuota">Valor Cuota</string>
    <string name="monto_a_pagar">Monto a Pagar</string>
    <string name="pagar">Pagar</string>
    <string name="enviar">Enviar</string>
    <string name="inscribir">Inscribir</string>
    <string name="dni">DNI</string>
    <string name="dni_cliente">DNI Cliente</string>
    <string name="description_cant_cuotas">Campo para seleccionar la cantidad de cuotas</string>
    <string name="description_payment_method">Campo para seleccionar la forma de pago</string>
    <string name="seleccionar_actividad">Seleccionar Actividad</string>
    <string name="confirmar_seleccion">Confirmar Selección</string>

    <!--    Dropdown items  -->
    <string-array name="payment_methods">
        <item>Tarjeta de Credito</item>
        <item>Efectivo</item>
    </string-array>

    <string-array name="installments">
        <item>1 Cuota</item>
        <item>3 Cuotas</item>
        <item>6 Cuotas</item>
    </string-array>

    <!--   Lista de Actividades -->
    <string-array name="activities">
        <item>Yoga</item>
        <item>Pilates</item>
        <item>Tonificacion</item>
        <item>Defensa Personal</item>
    </string-array>
</resources>
