<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.PagarCuotaActivity">

    <include layout="@layout/component_header_layout" />
    <include layout="@layout/component_logo_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/container_gradient"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/dniInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/form_input"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:inputType="text|number"
                android:padding="10dp"
                android:hint="@string/dni_cliente"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btnSelectActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_form"
                android:text="@string/seleccionar_actividad"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:backgroundTint="@null"/>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/form_input"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:inputType="text|number"
                android:padding="10dp"
                android:hint="@string/monto_a_pagar"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_form"
                android:includeFontPadding="false"
                android:text="@string/pagar"
                android:textSize="18sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>